# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: brain-games.yml
brain_games/: .cli.py.swp  cli.py
brain_games/games/: brain_calc_logic.py  brain_even_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression.py  brain_progression_logic.py
brain_games/scripts/: .brain_calc.py.swp  .brain_even.py.swp  .brain_games.py.swo  .brain_games.py.swp  .brain_gcd.py.swp  .brain_prime.py.swp  .brain_progression.py.swp  .gameplay.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py  gameplay.py
